--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -18,3 +18,9 @@
 	position: relative;
 	box-shadow: 0 1px 8px rgba(0,0,0,.4);
 }
+
+.img-center {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
