--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -11,12 +11,10 @@
 <meta property="twitter:description" content="{{ video.description|length > 250 ? video.description|slice(0, 250) ~ '...' : video.description }}">
 <meta property="twitter:image" content="{{ domain }}{{ video_thumbnail(video.video_id) }}">
 <meta name="twitter:card" content="summary_large_image">
+<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
 <script>
    video_id = '{{ video.video_id }}';
    user_id = '{{ video.author }}';
-</script>
-<script>
-   document.getElementById("defaultOpen").click();
 </script>
 <link href="https://unpkg.com/plyr@3.6.8/dist/plyr.css" rel="stylesheet">
 {% endblock %}
@@ -118,14 +116,14 @@
 		                   <h1>{{ video.title }}</h1>
 
             <div class="grid">
-               <div class="col-8">                  <img src="{{ profile_image(video.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
+               <div class="col-6">                  <img src="{{ profile_image(video.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
                   <a href="user.php?name={{ video.u_name }}"><b style="height: 20px;display: inline-block;">{{ video.u_name }}</b></a>
                   <br>
                   <button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Follow") }}{% endif %}</button>
                   <div class="subscribe-count">{{ subCount }}</div>
                   <br>
                </div>
-               <div class="col-4 right">
+               <div class="col-6 right">
                   <h1 style="color:#333;font-weight:normal;margin-bottom: 4px;">{{ video.views }}</h1>
                   <div class="likesaber">
                      <div class="like" style="width:{{ videoRatio}}%"></div>
@@ -146,8 +144,11 @@
                   </div>
 			</div>
 			<div class="col-4 right">
-			                  <div class="tab">
+			      <div class="tab">
                      <button class="tablinks" onclick="openTab(event, 'About')" id="defaultOpen">About</button>
+					 <button class="tablinks" onclick="openTab(event, 'About')">Share</button>
+					 <button class="tablinks" onclick="openTab(event, 'About')" id="flag">{{ icon("bar-chart-fill", 14) }}</button>
+					 <button class="tablinks" onclick="openTab(event, 'About')" id="flag">{{ icon("flag-fill", 14) }}</button>
                   </div>
 			</div>
 			</div>
@@ -195,11 +196,9 @@
          </div>
       </div>
       <div class="col-4">
-         <div class="card">
-            <div class="card-header">
-               <h5>{{ __("Explore More Videos") }}</h5>
-            </div>
-            <div class="card-body">
+               {% for related_video in related_videos %}
+               {{ small_video_box(related_video)}}
+               {% endfor %}
                <div class="card">
                   <div class="card-header" id="fromUser">
                      <h5>{{ __("More videos from %s", [video.u_name]) }}</h5>
@@ -207,11 +206,6 @@
                   <div class="card-body collapsed" id="fromUserVideoList">
                   </div>
                </div>
-               {% for related_video in related_videos %}
-               {{ small_video_box(related_video)}}
-               {% endfor %}
-            </div>
-         </div>
       </div>
    </div>
 </div>
