port bootstrap 3 grid system

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,94 +6,8 @@
 @import "_variables";
 /* SB CSS STARTS HERE ======================================================== */
 
-// Small tablets and large smartphones (landscape view)
-$screen-sm-min: 576px;
-
-// Small tablets (portrait view)
-$screen-md-min: 768px;
-
-// Tablets and small desktops
-$screen-lg-min: 992px;
-
-// Large tablets and desktops
-$screen-xl-min: 1200px;
-
-// Small devices
-@mixin sm {
-  @media (min-width: #{$screen-sm-min}) {
-    @content;
-  }
-}
-
-// Medium devices
-@mixin md {
-  @media (min-width: #{$screen-md-min}) {
-    @content;
-  }
-}
-
-// Large devices
-@mixin lg {
-  @media (min-width: #{$screen-lg-min}) {
-    @content;
-  }
-}
-
-// Extra large devices
-@mixin xl {
-  @media (min-width: #{$screen-xl-min}) {
-    @content;
-  }
-}
-
-$columns: 12;
-$gap: 25px;
-$breakpoints: (
-  sm: 500px,
-  md: 700px,
-  lg: 800px,
-  xl: 1000px,
-);
-
-@mixin create-selectors($breakpoint: null) {
-  $infix: if($breakpoint == null, "", "-#{$breakpoint}");
-
-  @for $i from 1 through $columns {
-    .col#{$infix}-#{$i} {
-	  -ms-grid-column: $i;
-      grid-column-end: span $i;
-    }
-    .col-offset#{$infix}-#{$i} {
-	 -ms-grid-column: $i;
-      grid-column-start: $i + 1;
-    }
-    .row#{$infix}-#{$i} {
-	 -ms-grid-column: $i;
-      grid-row-end: span $i;
-    }
-    .row-offset#{$infix}-#{$i} {
-	 -ms-grid-column: $i;
-      grid-row-start: $i + 1;
-    }
-  }
-}
-
-.grid {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-template-columns: $columns $columns $columns 1fr;
-  grid-template-columns: repeat($columns, 1fr);
-  grid-gap: $gap;
-  gap: $gap;
-}
-
-@include create-selectors;
-
-@each $breakpoint, $width in $breakpoints {
-  @media (min-width: $width) {
-    @include create-selectors($breakpoint);
-  }
-}
+@import "_clearfix";
+@import "_grid-breakpoints";
 
 body {
   background: #fbfbfb;
