--- a/assets/scss/_grid-breakpoints.scss
+++ b/assets/scss/_grid-breakpoints.scss
@@ -39,7 +39,8 @@ $screen-xl-min: 1200px;
 }
 
 $columns: 12;
-$gap: 30px;
+$grid-columns: 12;
+$gap: 50px;
 $breakpoints: (
     sm: 500px,
     md: 700px,
@@ -47,36 +48,87 @@ $breakpoints: (
     xl: 1000px
 );
 
-@mixin create-selectors($breakpoint: null) {
-    $infix: if($breakpoint == null, '', '-#{$breakpoint}');
+@mixin make-grid-columns($i: 1, $list: ".col-#{$i}") {
+  @for $i from (1 + 1) through $columns {
+    $list: "#{$list}, .col-#{$i}";
+  }
+  #{$list} {
+    position: relative;
+    // Prevent columns from collapsing when empty
+    min-height: 1px;
+    // Inner gutter via padding
+    padding-right: floor(($gap / 2));
+    padding-left: ceil(($gap / 2));
+  }
+}
 
-    @for $i from 1 through $columns {
-        .col#{$infix}-#{$i} {
-            grid-column-end: span $i;
-        }
-        .col-offset#{$infix}-#{$i} {
-            grid-column-start: $i + 1;
-        }
-        .row#{$infix}-#{$i} {
-            grid-row-end: span $i;
-        }
-        .row-offset#{$infix}-#{$i} {
-            grid-row-start: $i + 1;
-        }
-    }
+@include make-grid-columns;
+
+// Creates a wrapper for a series of columns
+@mixin make-row($gutter: $gap) {
+  margin-right: floor(($gap / -2));
+  margin-left: ceil(($gap / -2));
+  @include clearfix;
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: repeat($columns, 1fr);
-    grid-gap: $gap;
-    gap: $gap;
+  @include make-row;
 }
 
-@include create-selectors;
-
-@each $breakpoint, $width in $breakpoints {
-    @media (min-width: $width) {
-        @include create-selectors($breakpoint);
+@mixin calc-grid-column($index, $class, $type) {
+  @if ($type == width) and ($index > 0) {
+    .col-#{$class}-#{$index} {
+      width: percentage(($index / $grid-columns));
     }
+  }
+  @if ($type == push) and ($index > 0) {
+    .col-#{$class}-push-#{$index} {
+      left: percentage(($index / $grid-columns));
+    }
+  }
+  @if ($type == push) and ($index == 0) {
+    .col-#{$class}-push-0 {
+      left: auto;
+    }
+  }
+  @if ($type == pull) and ($index > 0) {
+    .col-#{$class}-pull-#{$index} {
+      right: percentage(($index / $grid-columns));
+    }
+  }
+  @if ($type == pull) and ($index == 0) {
+    .col-#{$class}-pull-0 {
+      right: auto;
+    }
+  }
+  @if ($type == offset) {
+    .col-#{$class}-offset-#{$index} {
+      margin-left: percentage(($index / $grid-columns));
+    }
+  }
 }
+
+@mixin float-grid-columns($class, $i: 1, $list: ".col-#{$class}-#{$i}") {
+  @for $i from (1 + 1) through $grid-columns {
+    $list: "#{$list}, .col-#{$class}-#{$i}";
+  }
+  #{$list} {
+    float: left;
+  }
+}
+
+@mixin loop-grid-columns($columns, $class, $type) {
+  @for $i from 0 through $columns {
+    @include calc-grid-column($i, $class, $type);
+  }
+}
+
+@mixin make-grid($class) {
+  @include float-grid-columns($class);
+  @include loop-grid-columns($grid-columns, $class, width);
+  @include loop-grid-columns($grid-columns, $class, pull);
+  @include loop-grid-columns($grid-columns, $class, push);
+  @include loop-grid-columns($grid-columns, $class, offset);
+}
+
+@include make-grid(md);
