--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -57,10 +57,10 @@
 	</div>
 	<div id="masthead-below">
 		<div class="grid">
-			<div class="col-6">
+			<div class="col-md-6">
 			Todo: add something.
 			</div>
-			<div class="col-4">
+			<div class="col-md-4">
 			<h4 style="margin:10px 0">squareBracket</h4>
 			<ul style="padding:0">
 			<li><a href="user.php?name={{ userdata.name }}">{{ userdata.name }}</a></li>
@@ -73,7 +73,7 @@
 	{% block precontent %}{% endblock %}
 	<div class="container">
 		<div class="grid">
-			<div class="col-2">
+			<div class="col-md-2">
 				<div class="guide-channels-list">
 					<ul class="guide">
 						<li class="guide-channel">
@@ -91,7 +91,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-10">
+			<div class="col-md-10">
 				<div class="container" style="margin-left: 0; padding: 0 70px 0 0;">
 					{% block content %}{% endblock %}
 				</div>
