--- a/templates/sbnext-finalium/settings.twig
+++ b/templates/sbnext-finalium/settings.twig
@@ -75,5 +75,7 @@
 	</tr>
 </table>
 <input type="hidden" name="magic" value="FOR GOD SAKES OPEN THE SILO DOOR">
+<div class="right">
 <input class="button button-primary" type="submit" name="action" value="{{ __("Save Changes") }}">
+</div>
 	{% endblock %}
