--- a/templates/sbnext-finalium/upload_part1.twig
+++ b/templates/sbnext-finalium/upload_part1.twig
@@ -5,7 +5,7 @@
 	{% block content %}
 <h1>Upload</h1>
 <div class="grid">
-	<div class="feature col-6">
+	<div class="feature col-md-6">
 		<div class="feature-icon bg-primary">
 			{{ icon_alt('film', 32) }}
 		</div>
@@ -15,7 +15,7 @@
 			{{ icon('chevron-right', 16) }}
 		</a>
 	</div>
-	<div class="feature col-6">
+	<div class="feature col-md-6">
 		<div class="feature-icon bg-danger">
 			{{ icon_alt('music-note-beamed', 32) }}
 		</div>
