--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,6 +9,14 @@
 @import "_clearfix";
 @import "_grid-breakpoints";
 
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   background: #fbfbfb;
   font-family: arial, helvetica, sans-serif;
@@ -520,6 +528,7 @@ form.reglog {
 }
 
 .main-content {
+  background-color: #312a6c;
   background: -moz-linear-gradient(top left, #312a6c, #852d91);
   background-size: cover;
   margin: 0;
@@ -752,11 +761,10 @@ box-sizing: border-box;
 		width: 100%;
 		padding: 2px 6px;
 		margin: 0;
-		border: 0;
 		font-size: 16px;
 		box-sizing: border-box;
 		height: 29px;
-		border-radius: 0;
+		border-radius: 3px 0 0 3px;
 		}
 	}
 }
@@ -866,7 +874,6 @@ padding: 0;
 
 .subscribe-count {
     padding: 0 6px;
-    height: 22px;
     border: 1px solid #ccc;
     color: #777;
     font-size: 12px;
