--- a/templates/sbnext-finalium/components/videobox.twig
+++ b/templates/sbnext-finalium/components/videobox.twig
@@ -1,14 +1,14 @@
 <div class="card" style="margin-bottom:4px">
 	<div class="card-body">
 		<div class="grid">
-			<div class="col-4">
+			<div class="col-md-4">
 				<a href="watch.php?v={{ data.video_id }}">
 					<div class="card card-body">
 						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
 					</div>
 				</a>
 			</div>
-			<div class="col-8">
+			<div class="col-md-8">
 				<h3><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
 				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("views") }}	&bull;
 				<span class="text-muted">{{ data.time | relative_time }}</span> &bull; {{ data.category_id | category_id_to_name() }}</p>
