--- a/templates/sbnext-finalium/user.twig
+++ b/templates/sbnext-finalium/user.twig
@@ -9,7 +9,7 @@
 {% block content %}
 <style>
 	.channel-header-bg {
-	background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444);
+	background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444) !important;
 	background-position: center;
 	}
 </style>
