--- a/templates/sbnext-finalium/studio/index.twig
+++ b/templates/sbnext-finalium/studio/index.twig
@@ -23,10 +23,7 @@
       </div>
 	  </div>
 	  </div>
-		  
-          <h2 class="sub-header">Videos</h2>
-          <div class="table-responsive">
-            <table class="table table-striped">
+            <table class="c1">
               <thead>
                 <tr>
                   <th>Internal ID</th>
@@ -44,8 +41,5 @@
 			   {% endfor %}
               </tbody>
             </table>
-          </div>
-        </div>
-      </div>
 
 	{% endblock %}
