--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -35,7 +35,11 @@
 			<a href="/" id="logo-container"><img id="logo" src="/assets/logo-masthead.png"></a>
 			<div id="{% if log %}masthead-loggedin{% else %}masthead-signin{% endif %}" class="masthead-user">
 				{% if log %}
-				<div style="display: flex;justify-content: center;align-items: center;gap: 5px;">{{ userdata.name }}<img class="rounded" style="width:32px;margin-top: -2px;" src="{{ profile_image(userdata.name) }}"  alt="{{ userdata.name }}"></div>
+				<div style="display: flex;justify-content: center;align-items: center;gap: 5px;">
+				{{ userdata.name }}
+               <div {% if notification_count > 0 %}class="bg-danger text-light"{% else %}class="bg-neutral{% endif %}" style="padding:6px 8px;display: inline-block;">{{ notification_count }}</div>
+				<img class="rounded" style="width:32px;margin-top: -2px;" src="{{ profile_image(userdata.name) }}"  alt="{{ userdata.name }}">
+				</div>
 				{% else %}
 				<a href="../login.php" class="button button-primary">{{ __("Sign in") }}</a>
 				{% endif %}
