--- a/templates/sbnext-finalium/admin/index.twig
+++ b/templates/sbnext-finalium/admin/index.twig
@@ -5,30 +5,28 @@
 	{% block content %}
 <div class="row">
 	<div class="col-md-8">
-		<div class="panel panel-default">
-			<div class="panel-heading"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
-  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-</svg> Featured Videos</div>
-			<div class="panel-body">
-				{% for video in videos %}
-					{{ video_box(video) }}
-				{% else %}
-					<p>No uploaded videos. :'(</p>
-				{% endfor %}
-			</div>
-		</div>
-	</div>
+          <h2 class="sub-header">Videos</h2>
+            <table class="c1">
+              <thead>
+                <tr class="h">
+                  <th>Internal ID</th>
+                  <th>Title</th>
+                  <th>Views</th>
+                </tr>
+              </thead>
+              <tbody>
+			  {% for video in videos %}
+                <tr>
+                  <td class="b n1">{{ video.id }}</td>
+                  <td class="b n2">{{ video.title }}</td>
+                  <td class="b n2">{{ video.views }}</td>
+                </tr>
+			   {% endfor %}
+              </tbody>
+            </table>
+        </div>
+      </div>
 	<div class="col-md-4">
-		<div class="panel panel-default">
-			<div class="panel-heading"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-newspaper" viewBox="0 0 16 16">
-  <path d="M0 2.5A1.5 1.5 0 0 1 1.5 1h11A1.5 1.5 0 0 1 14 2.5v10.528c0 .3-.05.654-.238.972h.738a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 1 1 0v9a1.5 1.5 0 0 1-1.5 1.5H1.497A1.497 1.497 0 0 1 0 13.5v-11zM12 14c.37 0 .654-.211.853-.441.092-.106.147-.279.147-.531V2.5a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0-.5.5v11c0 .278.223.5.497.5H12z"/>
-  <path d="M2 3h10v2H2V3zm0 3h4v3H2V6zm0 4h4v1H2v-1zm0 2h4v1H2v-1zm5-6h2v1H7V6zm3 0h2v1h-2V6zM7 8h2v1H7V8zm3 0h2v1h-2V8zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1z"/>
-</svg> Latest News</div>
-			<div class="panel-body">
-				some stuff here idk
-			</div>
-		</div>
 	</div>
-</div>
 
 	{% endblock %}
