fix logo_monochrome not working on forums

--- a/templates/sbnext-finalium/_error.twig
+++ b/templates/sbnext-finalium/_error.twig
@@ -7,6 +7,6 @@
 	<h2>{{ err_message }}</h2>
 	<hr>
 	<p>{{ __("Sorry about that.") }}</p>
-	<div style="text-align:center;margin:auto"><img src="assets/logo_monochrome.png" style="max-width:150px;"></div>
+	<div style="text-align:center;margin:auto"><img src="../assets/logo_monochrome.png" style="max-width:150px;"></div>
 </div>
 	{% endblock %}
