--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -528,12 +528,12 @@ form.reglog {
 }
 
 .main-content {
-  background-color: #312a6c;
-  background: -moz-linear-gradient(top left, #312a6c, #852d91);
+  background-color: 573a6f;
+  background: -moz-linear-gradient(top left, #211c48, #85528c);
   background-size: cover;
   margin: 0;
   padding: 0;
-  min-height: 225px;
+  min-height: 215px;
   color: #ffffff;
   display: flex;
 display: -webkit-box;
