--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -81,7 +81,7 @@
 				<div class="guide-channels-list">
 					<ul class="guide">
 						<li class="guide-channel">
-							<a href="/" class="guide-item"><div class="thumb">{{ icon_alt('house', 16) }}</div><div>{{ __("Home") }}</div></a>
+							<a href="/" class="guide-item"><div class="thumb">{{ icon_alt('house-door', 16) }}</div><div>{{ __("Home") }}</div></a>
 						</li>
 						<li class="guide-channel">
 							<a href="browse.php" class="guide-item"><div class="thumb">{{ icon_alt('film', 16) }}</div><div>{{ __("Videos") }}</div></a>
