--- a/templates/sbnext-finalium/forum/thread.twig
+++ b/templates/sbnext-finalium/forum/thread.twig
@@ -55,8 +55,8 @@
 			<td class="b"></td>
 			<td class="b">
 				<input type="hidden" name="tid" value="{{ tid }}">
-				<input type="submit" name="action" class="button button-secondary" value="{{ __("Submit") }}">
-				<input type="submit" name="action" class="button button-secondary"value="{{ __("Preview") }}">
+				<input type="submit" name="action" class="button button-secondary button-small" value="{{ __("Submit") }}">
+				<input type="submit" name="action" class="button button-secondary button-small"value="{{ __("Preview") }}">
 			</td>
 		</tr>
 	</table>
