--- a/templates/sbnext-finalium/studio/index.twig
+++ b/templates/sbnext-finalium/studio/index.twig
@@ -23,7 +23,10 @@
       </div>
 	  </div>
 	  </div>
-            <table class="c1">
+		  
+          <h2 class="sub-header">Videos</h2>
+          <div class="table-responsive">
+            <table class="table table-striped">
               <thead>
                 <tr>
                   <th>Internal ID</th>
@@ -41,5 +44,8 @@
 			   {% endfor %}
               </tbody>
             </table>
+          </div>
+        </div>
+      </div>
 
 	{% endblock %}
