--- a/assets/scss/_style_forums.scss
+++ b/assets/scss/_style_forums.scss
@@ -69,8 +69,9 @@ table.c1 {
 		text-align: center;
 
 		.avatar {
-			max-width: 160px;
-			max-height: 160px;
+			max-width: 120px;
+			max-height: 120px;
+			border-radius: 5px;
 		}
 	}
 
