--- a/templates/sbnext-finalium/forum/sendprivate.twig
+++ b/templates/sbnext-finalium/forum/sendprivate.twig
@@ -33,8 +33,8 @@
 		</tr><tr>
 			<td class="b n1"></td>
 			<td class="b n1">
-				<input type="submit" name="action" value="{{ __("Submit") }}">
-				<input type="submit" name="action" value="{{ __("Preview") }}">
+				<input type="submit" class="button button-secondary button-small" name="action" value="{{ __("Submit") }}">
+				<input type="submit" class="button button-secondary button-small" name="action" value="{{ __("Preview") }}">
 			</td>
 		</tr>
 	</table>
