--- a/templates/sbnext-finalium/index.twig
+++ b/templates/sbnext-finalium/index.twig
@@ -4,12 +4,12 @@
 
 	{% block precontent %}
 <div class="main-content">
-	<div class="container" style="max-width:1200px;">
+	<div class="container" style="max-width:1125px;">
 		{% if log %}
 		<div class="grid">
-			<div class="col-md-10 flex-center">
+			<div class="col-md-10">
 				<p class="text-start">
-				<h2>{{ __("Welcome,") }} {{ userdata.title }}</h2>
+				<h1>{{ __("Welcome,") }} {{ userdata.title }}</h1>
 				{# hack to prevent twig from outputing the number 1 #}
 				{% if totalSubscribers != 1 %}
 					{% set pluralSubscribers = __("s") %}
@@ -17,10 +17,10 @@
 				{% if totalViews != 1 %}
 					{% set pluralViews = __("s") %}
 				{% endif %}
-				<p class="fs-5 mb-1">@{{ userdata.name }}
-					&bull; {{ __("%s follower%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }}
+				<h3>@{{ userdata.name }}</h3>
+				<p>{{ __("%s follower%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }}
 					&bull; {{ __("%s view%s", [totalViews ?? __("no"), pluralViews]) }}</p>
-				<a class="button button-primary button-large" href="../studio/">{{ __("Go to studio") }} {{ icon('caret-right-fill', 16) }}</a>
+				<a class="button button-neutral" href="../studio/">{{ __("Manage content") }} {{ icon('caret-right-fill', 12) }}</a>
 			</div>
 			<div class="col-md-2">
 				<img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}" alt="{{ userdata.name }}">
