--- a/templates/sbnext-finalium/components/smallvideobox.twig
+++ b/templates/sbnext-finalium/components/smallvideobox.twig
@@ -1,9 +1,8 @@
 		<div class="grid" style="gap: 2px; margin-bottom: 5px;">
-			<div class="col-md-4 flex-center">
+			<div class="col-md-4 ">
 				<a href="watch.php?v={{ data.video_id }}">
-					<div>
-						<img class="img-fluid img-center" src="{{ video_thumbnail(data.video_id) }}" width="120">
-					</div>
+						<img class="img-fluid " src="{{ video_thumbnail(data.video_id) }}">
+						<span class="video-time">Placeholder</span>
 				</a>
 			</div>
 			<div class="col-md-8 vid-info">
