--- a/templates/sbnext-finalium/components/videobox.twig
+++ b/templates/sbnext-finalium/components/videobox.twig
@@ -3,9 +3,8 @@
 		<div class="grid">
 			<div class="col-md-4">
 				<a href="watch.php?v={{ data.video_id }}">
-					<div class="card card-body">
 						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
-					</div>
+						<span class="video-time">Placeholder</span>
 				</a>
 			</div>
 			<div class="col-md-8">
