--- a/assets/scss/darkmode.scss
+++ b/assets/scss/darkmode.scss
@@ -1,6 +1,10 @@
 @import "_variables";
 @import "_gradients";
 
+$blue: #186aad;
+$green: #51ad18;
+$red: #ad1818;
+
 $theme-colors: (
   "primary":    $primary,
   "secondary":  $gray-800,
